syntax = "proto3";
package deathnode.sync;

option java_package = "com.deathnode.server.grpc";
option java_outer_classname = "SyncProto";

message Hello {
  string node_id = 1;
}

message BufferUpload {
  string node_id = 1;
  // each envelope is the full envelope JSON bytes
  repeated bytes envelopes = 2;
  int64 last_node_sequence = 3;
  string last_envelope_hash = 4;
}

message ClientMessage {
  oneof body {
    Hello hello = 1;
    BufferUpload buffer_upload = 2;
  }
}

message RequestBuffer {
  string round_id = 1;
  string message = 2; // human text
}

message SyncResult {
  string round_id = 1;
  repeated bytes ordered_envelopes = 2; // full envelope bytes in global order
  repeated string envelope_hashes = 3;  // same order, hash hex string
}

message Ack {
  string message = 1;
}

message ServerMessage {
  oneof body {
    RequestBuffer request_buffer = 1;
    SyncResult sync_result = 2;
    Ack ack = 3;
  }
}

service SyncService {
  // Bidirectional stream: client sends ClientMessage, server streams ServerMessage
  rpc Sync(stream ClientMessage) returns (stream ServerMessage);
  rpc RequestSync(ClientMessage) returns (Ack);
}
