syntax = "proto3";

option java_package = "grpc_generated";
option java_outer_classname = "DeathNodeProtoBuf";

service DeathNode {
    rpc CreateReport (CreateReportArgs) returns (CreateReportReply);
    rpc ListReports (Empty) returns (Empty);
    rpc Sync (SyncRequest) returns (SyncReply);
}

message CreateReportArgs {
  Report report = 1;
}

message Report {
  string id = 1;
  string author = 2;
  string timestamp = 3;
  string content = 4;
}

message CreateReportReply {
  string ack = 1;
}

message SyncRequest {
  int32 version = 1;
  string version_hash = 2;
}

message SyncReply {
  int32 version = 1;
  string version_hash = 2;
  repeated Report reports = 5;
}

message Empty {}

